--- a/Results/report.html
+++ b/Results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,95047],[],[[5,0,6,[7,8],[1,292,19050],[]],[9,0,10,[11,12],[1,19342,17506],[]],[13,0,14,[15],[0,36850,28512,16],[]],[17,0,18,[19],[1,65363,29684],[]]],[],[4,3,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,32],[],[[4,0,0,[],[1,25,2],[]],[5,0,0,[],[1,27,1],[]],[6,0,7,[],[1,29,2],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*D:\\Bibliotecas\\Documentos\\github\\RobotFramework\\WebTesting\\amazon_testes.robot","*../WebTesting/amazon_testes.robot","*<p>Esta suite teste o site da amazon\x3c/p>","*Caso de teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Este teste verifica o menu Eletrônicos do side da amazon\x3c/p>","*categorias","*menus","*Caso de teste 02 - Pesquisa de um Produto","*<p>Este teste verifica a busca de um produto\x3c/p>","*busca_produtos","*lista_busca","*Caso de Teste 03 - Adicionar Produto no Carrinho","*<p>Esse teste verifica a adição de um produto no carrinho de compras\x3c/p>","*adicionar_carrinho","*Element '//span[contains(text(),'Carrinho')]//parent::span//input[@type='submit']' not visible after 5 seconds.","*Caso de Teste 04 - Remover Produto do Carrinho","*<p>Esse teste verifica a remoção de um produto no carrinho de compras\x3c/p>","*remover_carrinho"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Argumentos","*D:\\Bibliotecas\\Documentos\\github\\RobotFramework\\argumentos\\argumentos.robot","*../argumentos/argumentos.robot","*Relembrando argumentos posicionais x nomeados","*Teste de Argumentos Opcionais","*Criando lista e dicionário via parâmetro","*<p>No Python é conhecido como \"kwargs\"\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:35","fail":1,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:29","fail":1,"label":"adicionar_carrinho","pass":0,"skip":0},{"elapsed":"00:00:18","fail":0,"label":"busca_produtos","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"label":"categorias","pass":1,"skip":0},{"elapsed":"00:00:18","fail":0,"label":"lista_busca","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"label":"menus","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"label":"remover_carrinho","pass":1,"skip":0}],[{"elapsed":"00:01:35","fail":1,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Argumentos","name":"Argumentos","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1745369568941;
+window.output["baseMillis"] = 1745375056660;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 95063;
+window.output["generated"] = 42;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
